# flipchartparser

./: .gitignore  README.md  build.gradle  pubspec.yaml  settings.gradle
android/cpp/: native-lib.cpp
android/cpp/include/QtCore/: qtcore-config.h
android/cpp/src/: FlipChartController.cpp  FlipChartController.h  FlipChartManager.cpp  FlipChartManager.h  asfactory.cpp
android/cpp/src/dataStruct/: asinstructlist.cpp  asinstructlist.h  asinstructlistlist.cpp  asinstructlistlist.h  asmoulist.cpp  asmoulist.h  aspathinstructs.h  aspointfarray.cpp  aspointfarrayarray.cpp  aspointfarrayarray.h  asrectf.cpp  asrectf.h
android/cpp/src/global/: asdefines.h
android/cpp/src/io/: asasynctestlevellist.h  asnode.cpp  asnode.h  asobjectstreamer.cpp  asstreamer.cpp
android/cpp/src/objects/: asaction.cpp  asactionapp.cpp  asactionlaunchminiapp.cpp  asactionmove.cpp  asactiononobject.h  asactionontext.cpp  asactionontext.h  asactionopenexternal.cpp  asannotation.cpp  asflipchart.cpp  asgrid.cpp  asgrid.h  asimage.cpp  asink.cpp  asink.h  asline.cpp  asmediacontainer.h  asobject.cpp  asobject.h  aspropertybase.cpp  aspropertybase.h  asrenderable.cpp  asrenderable.h  asrenderablegroup.cpp  asrenderablegroup.h  asshape.cpp  astext.cpp  astext.h  astextrun.cpp  astextrun.h  astransform.cpp  astransform.h  asundoresourceindex.cpp  asvirtualfolderindex.cpp  qpolygonf.cpp
android/cpp/src/resources/: aslineres.cpp  aslineres.h  asmotion.cpp  asresource.cpp  asresourceindex.cpp  asresourceindex.h  asresourceitem.cpp  asshaperes.cpp  asshaperes.h  astextres.cpp  astextres.h
android/cpp/src/util/: asfileutils.h  asutil.cpp  (+6 more)
android/gradle/wrapper/: gradle-wrapper.properties
cpp/: CMakeLists.txt  native-lib.cpp
cpp/include/QtCore/: qconfig.h
cpp/src/: FlipChartController.h  asfactory.h
cpp/src/dataStruct/: asoptionlist.cpp  asoptionlist.h  aspathinstructs.cpp  aspointfarray.h  asstringpairlist.cpp  asstringpairlist.h  astextrunarray.cpp  astextrunarray.h
cpp/src/global/: global.cpp  global.h
cpp/src/io/: QJsonConvert.cpp  QJsonConvert.h  asasynctestlevellist.cpp  asfileio.cpp  asfileio.h  asobjectstreamer.h  asstreamer.h
cpp/src/objects/: asaction.h  asactionapp.h  asactionlaunchminiapp.h  asactionmove.h  asactionnavigate.cpp  asactionnavigate.h  asactiononobject.cpp  asactionopenexternal.h  asannotation.h  asbackground.cpp  asbackground.h  asflipchart.h  asimage.h  asline.h  asmediacontainer.cpp  asobject.cpp  asorigin.cpp  asorigin.h  aspage.cpp  aspage.h  aspointer.cpp  aspointer.h  asshape.h  astransform.cpp  asundoresourceindex.h  asvirtualfolder.cpp  asvirtualfolder.h  asvirtualfolderindex.h  aswidgetcontainer.cpp  aswidgetcontainer.h  qcolor.h  qpolygonf.h
cpp/src/resources/: asannotationres.cpp  asannotationres.h  asimageres.cpp  asimageres.h  asmediafileres.cpp  asmediafileres.h  asmotion.h  asresource.h  asresourceitem.h  asresourcemanager.cpp  asresourcemanager.h  asresourceregister.cpp  asresourceregister.h
cpp/src/util/: asfileutils.cpp  ashashmd5.cpp  ashashmd5.h  aszipfileinfo.h
doc/: FunctionalDocumentation.md  flipchart解析Json格式.md
example/: .flutter-plugins-dependencies  README.md  pubspec.yaml
example/android/: gradle.properties
example/android/app/: build.gradle
example/ios/Flutter/: flutter_export_environment.sh
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flipchartparser.podspec
ios/Classes/: FlipchartparserPlugin.h  FlipchartparserPlugin.m
lib/: flipchartparser.dart
src/main/: AndroidManifest.xml
test/: flipchartparser_test.dart
(+5 files in other folders)
